--- a/The Tribute Web.css
+++ b/The Tribute Web.css
@@ -3,13 +3,71 @@
     padding: 0;
     box-sizing:border-box;
     font-family:'Courier New', Courier, monospace;
+    list-style: none;
+    text-decoration: none;
 }
-
+ 
  html,
  body{
     line-height: 1.4;
-    font-weight: 300;
+    font-weight: 300; 
  }
+html {
+  scroll-behavior: smooth;
+}
+
+ .navbar {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(177, 20, 20, 0.068);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 40px;
+  z-index: 1000;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+}
+
+.navbar .logo {
+  font-size: 22px;
+  font-weight: bold;
+  color: cadetblue;
+}
+
+.navbar .nav-links {
+  display: flex;
+  gap: 30px;
+}
+
+.navbar .nav-links li a {
+  color: rgb(12, 12, 12);
+  font-size: 18px;
+  transition: 0.3s;
+  position: relative;
+}
+
+.navbar .nav-links li a::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background: cadetblue;
+  left: 0;
+  bottom: -5px;
+  transition: 0.3s;
+}
+
+.navbar .nav-links li a:hover::after {
+  width: 100%;
+}
+
+.navbar .nav-links li a:hover {
+  color: cadetblue;
+}
+
  .hero_section{
     background-image: url(images/pexels-pixabay-434337.jpg);
     min-height: 100vh;
@@ -63,7 +121,7 @@
     height: 400px;
     border-radius: 20px;
     box-shadow: 3px 5px 5px rgba(1, 1, 1, 0.2);
-    transition: 0.2s ease-in-out;
+    transition:  all .55s ease-in-out;
    }
    .grid-item{
       display: flex;
@@ -79,7 +137,7 @@
     transform: scale(1.04);
     box-shadow: 3px 5px 5px rgba(1, 1, 1, 0.2);
     transition: 0.2s ease-in-out;
-    background-color: #000;
+    background-color: #644242;
     color: antiquewhite;
 }
 
@@ -87,11 +145,17 @@
     display: flex;
 }
  .contact{
-    background-color: green;
+    background-color:rgb(107, 135, 163) ;
+    
  }
+
  .about{
-    background-color: brown;
+  background-color: #644242;
+    
+    
  }
+ 
+
  .contact,.about{
     min-height: 300px;
     padding: 32px;
@@ -120,12 +184,23 @@
  footer{
     text-align: center;
     text-transform: uppercase;
-    background-color: #000;
+    background-color: white;
     padding: 20px;
-    color: aliceblue;
+    color: black;
+ }
+.list ul:hover{
+   transform: scale(1.04);
+    transition: 0.2s ease-in-out;
+    border: none;
  }
 .list li{
        padding-right:85%;
+}
+a{
+  color: #000;
+}
+a:hover{
+   color: #644242;
 }
 .text-aboutme{
   padding-top: 20px;
@@ -144,15 +219,12 @@
   margin: 10px;
 
  }
- .name-p:active{
-      background-color: black;
- }
+ 
  .name-p:hover{
     transform: scale(1.04);
     box-shadow: 3px 5px 5px rgba(1, 1, 1, 0.2);
     transition: 0.2s ease-in-out;
     background-color:cadetblue;
-    color:black;
  }
   .name-p2{
   border-radius: 5px;
